examples/kubernetes/manifests/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-agent
  labels:
    name: grafana-agent
