examples/kubernetes/manifests/03-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: grafana-agent
  labels:
    app: prometheus
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
      protocol: TCP
